--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "backend:dev": "PORT=3001 nodemon src/index.js",
-    "backend:start": "PORT=3001 node src/index.js",
+    "backend:dev": "cross-env PORT=3001 nodemon src/index.js",
+    "backend:start": "cross-env PORT=3001 node src/index.js",
     "frontend:dev": "next dev",
     "db:setup": "docker-compose up -d",
     "db:down": "docker-compose down",
@@ -19,10 +19,6 @@
     "dev:frontend-only": "npm run frontend:dev"
   },
   "dependencies": {
-    "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "date-fns": "^3.6.0",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -41,36 +37,41 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "lucide-react": "^0.294.0",
-    "tailwind-merge": "^2.0.0",
-    "tailwindcss-animate": "^1.0.7",
+    "cors": "^2.8.5",
+    "date-fns": "^3.6.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "sequelize": "^6.35.2",
+    "helmet": "^7.1.0",
+    "lucide-react": "^0.294.0",
+    "morgan": "^1.10.0",
+    "next": "14.0.4",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "helmet": "^7.1.0",
-    "morgan": "^1.10.0"
+    "react": "^18",
+    "react-dom": "^18",
+    "sequelize": "^6.35.2",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/bcrypt": "^5.0.2",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
+    "concurrently": "^8.2.2",
+    "cross-env": "^7.0.3",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
-    "nodemon": "^3.0.2",
     "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
+    "postcss": "^8",
     "supertest": "^6.3.3",
-    "concurrently": "^8.2.2"
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   },
   "overrides": {
     "date-fns": "^3.6.0"
